# flock

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/: copilot-instructions.md
.github/workflows/: MainDistributionPipeline.yml  WebsiteDeploy.yaml  _extension_code_quality.yml  _extension_deploy.yml  generate_artifacts.yml
docs/: .gitignore  AGENTS.md  README.md  audio-support.mdx  developer-guide.mdx  docs.json  docusaurus.config.ts  faq.mdx  hybrid-search.mdx  image-support.mdx  index.mdx  installation.mdx  llm-metrics.mdx  model-parameters.mdx  package-lock.json  package.json  performance.mdx  structured-output.mdx  tsconfig.json  wasm.mdx  what-is-flock.mdx
docs/aggregate-functions/: index.mdx  llm-first.mdx  llm-last.mdx  llm-reduce.mdx  llm-rerank.mdx  overview.mdx
docs/development/: clion.md
docs/docs/: audio-support.md  developer-guide.md  faq.mdx  hybrid-search.md  image-support.md  llm-metrics.md  model-parameters.md  structured-output.md  what-is-flock.md  what-is-flockmtl.md
docs/getting-started/: anthropic.mdx  azure.mdx  index.mdx  ollama.mdx  openai.mdx  overview.mdx
docs/resource-management/: api-keys.mdx  index.mdx  models.mdx  overview.mdx  prompts.mdx
notebooks/: disaster_tweet_flockmtl.py  product_review_analysis_flockmtl.py
research_papers/: paper1.txt  paper2.txt  paper3.txt
scripts/: build_and_run.sh  build_project.sh
src/: CMakeLists.txt  flock_extension.cpp  flockmtl_extension.cpp
test/: CMakeLists.txt  flockmtl_test.db
test/custom_parser/: model_parser_test.cpp
test/functions/: mock_provider.hpp
test/functions/aggregate/: llm_aggregate_function_test_base.hpp  llm_first.cpp  llm_last.cpp  llm_reduce.cpp  llm_reduce_json.cpp  llm_rerank.cpp
test/functions/scalar/: llm_complete.cpp  llm_complete_json.cpp  llm_embedding.cpp  llm_filter.cpp  llm_function_test_base.hpp  llm_function_test_base_instantiations.cpp
test/functions/scalar/fusion_combanz/: unittest_fusion_combanz.cpp
test/functions/scalar/fusion_combmed/: unittest_fusion_combmed.cpp
test/functions/scalar/fusion_combmnz/: unittest_fusion_combmnz.cpp
test/functions/scalar/fusion_combsum/: unittest_fusion_combsum.cpp
test/functions/scalar/fusion_rrf/: sqltest_fusion_rrf.cpp  test_fusion_rrf.cpp  unittest_fusion_rrf.cpp
test/include/flockmtl-test/functions/scalar/fusion_rrf/: test_fusion_rrf.hpp
test/integration/: .env-example  .gitignore  pyproject.toml
test/integration/src/integration/: conftest.py  setup_test_db.py
test/integration/src/integration/tests/functions/aggregate/: __init__.py  test_llm_first.py  test_llm_last.py  test_llm_reduce.py  test_llm_rerank.py
test/integration/src/integration/tests/functions/scalar/: test_anthropic_specific.py  test_llm_complete.py  test_llm_embedding.py  test_llm_filter.py  test_metrics.py  test_rate_limit.py  test_usage_limit.py
test/integration/src/integration/tests/metrics/: test_metrics.py
test/integration/src/integration/tests/model_parser/: test_model_parser.py
test/integration/src/integration/tests/prompt_parser/: test_prompt_parser.py
test/integration/src/integration/tests/secret_manager/: test_secret_manager.py
test/model_manager/: model_manager_test.cpp  model_providers_test.cpp
test/prompt_manager/: prompt_manager_test.cpp
test/sql/flockmtl/: fusion_combanz.test  fusion_combmed.test  fusion_combmnz.test  fusion_combsum.test  fusion_rrf.test
test/unit/: CMakeLists.txt  README.md  flockmtl_test.db  ollama_test_utils.hpp  test_main.cpp  unit_test.db
test/unit/custom_parser/: model_parser_test.cpp  prompt_parser_test.cpp  tokenizer_test.cpp
test/unit/functions/: mock_provider.hpp  rate_limit_provider.hpp  usage_limit_provider.hpp
test/unit/functions/aggregate/: llm_aggregate_function_test_base.hpp  llm_first.cpp  llm_last.cpp  llm_reduce.cpp  llm_reduce_json.cpp  llm_rerank.cpp  llm_rerank_demo.cpp
test/unit/functions/scalar/: fusion_combanz_test.cpp  fusion_combmed_test.cpp  fusion_combmnz_test.cpp  fusion_combsum_test.cpp  fusion_rrf_test.cpp  llm_complete.cpp  llm_complete_demo.cpp  llm_complete_json.cpp  llm_embedding.cpp  llm_filter.cpp  llm_function_test_base.hpp  llm_function_test_base_instantiations.cpp  metrics_test.cpp  scalar_rate_limit_test.cpp  scalar_usage_limit_test.cpp
test/unit/model_manager/: anthropic_handler_test.cpp  demo_provider_test.cpp  model_manager_test.cpp  model_providers_test.cpp  model_repository_test.cpp  model_statements_test.cpp  rate_limiter_test.cpp  usage_limiter_test.cpp
test/unit/prompt_manager/: prompt_manager_test.cpp  prompt_statemenets_test.cpp
test/unit/secret_manager/: secret_manager_test.cpp
(+206 files in other folders)
